# CMakeList.txt : CMake project for MazeGameOpenGL, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("MazeGameOpenGL")

# Add source to this project's executable.
add_executable (MazeGameOpenGL "MazeGameOpenGL.cpp" "MazeGameOpenGL.h")

# TODO: Add tests and install targets if needed.
